--- a/backend/scraping/scrape.ipynb
+++ b/backend/scraping/scrape.ipynb
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1179,10 @@
     "    hour, minute = s \n",
     "    hour = int(hour)\n",
     "\n",
-    "    period = minute[2]\n",
+    "    if len(minute) > 2:\n",
+    "        period = minute[2]\n",
+    "    else:\n",
+    "        period = \"A\"\n",
     "    minute = int(minute[:2])\n",
     "\n",
     "    if period == 'P' and hour != 12:\n",
@@ -1198,7 +1201,7 @@
     "    \n",
     "def get_next_stop_with_time(group, current_stop):\n",
     "    for i in range(current_stop + 1, len(group)):\n",
-    "        if group.iloc[i][\"time\"] != \"F\":\n",
+    "        if group.iloc[i][\"time\"] != \"F\" and len(group.iloc[i][\"miles\"]) > 0:\n",
     "            return group.iloc[i]\n",
     "    return None\n",
     "\n",
@@ -1279,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -1299,19 +1302,39 @@
       "dump/concourse/track1/gulfcoastrebel195008.html\n",
       "dump/concourse/track1/humbird194706.html\n",
       "dump/concourse/track1/humbird196308.html\n",
-      "dump/concourse/track1/pan-am192701.html\n"
+      "dump/concourse/track1/pan-am192701.html\n",
+      "dump/concourse/track1/pan-am195407.html\n",
+      "dump/concourse/track1/piedmontltd197303.html\n",
+      "dump/concourse/track1/powhatan195008.html\n",
+      "dump/concourse/track1/rebel193809.html\n",
+      "dump/concourse/track1/rebel195304.html\n",
+      "dump/concourse/track1/silvercomet194706.html\n",
+      "dump/concourse/track1/soubelle194106.html\n",
+      "dump/concourse/track1/soubelle196803.html\n",
+      "dump/concourse/track1/southerner194112.html\n",
+      "dump/concourse/track1/tennessean195212.html\n",
+      "dump/concourse/track2/championec194106.html\n",
+      "dump/concourse/track2/championwc194106.html\n",
+      "dump/concourse/track2/champion197104.html\n",
+      "dump/concourse/track2/citymiami194106.html\n",
+      "dump/concourse/track2/citymiami197104.html\n",
+      "dump/concourse/track2/delmarva194310.html\n",
+      "dump/concourse/track2/dixieflag194106.html\n",
+      "dump/concourse/track2/floridaspecial194912.html\n",
+      "INVALID TIME PASSED IN \n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[304], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file_name, (name, schedule) \u001b[38;5;129;01min\u001b[39;00m file_name_to_name_and_schedule\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(file_name)\n\u001b[0;32m----> 5\u001b[0m     routes \u001b[38;5;241m=\u001b[39m schedule_to_routes(name, schedule)\n\u001b[1;32m      6\u001b[0m     all_routes[file_name] \u001b[38;5;241m=\u001b[39m routes\n",
-      "Cell \u001b[0;32mIn[303], line 84\u001b[0m, in \u001b[0;36mschedule_to_routes\u001b[0;34m(train_name, schedule)\u001b[0m\n\u001b[1;32m     81\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mERROR\u001b[39m\u001b[38;5;124m\"\u001b[39m, current_stop)\n\u001b[1;32m     82\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m---> 84\u001b[0m distance_with_time \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(next_stop_with_time[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmiles\u001b[39m\u001b[38;5;124m\"\u001b[39m]) \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mfloat\u001b[39m(last_entry_with_time[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmiles\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     85\u001b[0m miles_per_second \u001b[38;5;241m=\u001b[39m distance_with_time \u001b[38;5;241m/\u001b[39m (time_to_seconds(next_stop_with_time[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m\"\u001b[39m]) \u001b[38;5;241m-\u001b[39m time_to_seconds(last_entry_with_time[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m\"\u001b[39m]))\n\u001b[1;32m     87\u001b[0m distance_elapsed \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(next_stop[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmiles\u001b[39m\u001b[38;5;124m\"\u001b[39m]) \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mfloat\u001b[39m(last_entry_with_time[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmiles\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: ''"
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[308], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file_name, (name, schedule) \u001b[38;5;129;01min\u001b[39;00m file_name_to_name_and_schedule\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(file_name)\n\u001b[0;32m----> 5\u001b[0m     routes \u001b[38;5;241m=\u001b[39m schedule_to_routes(name, schedule)\n\u001b[1;32m      6\u001b[0m     all_routes[file_name] \u001b[38;5;241m=\u001b[39m routes\n",
+      "Cell \u001b[0;32mIn[307], line 95\u001b[0m, in \u001b[0;36mschedule_to_routes\u001b[0;34m(train_name, schedule)\u001b[0m\n\u001b[1;32m     93\u001b[0m     arrival_time \u001b[38;5;241m=\u001b[39m time_elapsed \u001b[38;5;241m+\u001b[39m time_to_seconds(last_entry_with_time[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     94\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 95\u001b[0m     arrival_time \u001b[38;5;241m=\u001b[39m time_to_seconds(next_stop[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     98\u001b[0m route \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     99\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdepartureTime\u001b[39m\u001b[38;5;124m'\u001b[39m: departure_time,\n\u001b[1;32m    100\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdepartureCoords\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mlist\u001b[39m(station_name_to_coords[current_station]),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    108\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrainNumber\u001b[39m\u001b[38;5;124m'\u001b[39m: current_stop[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain_number\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    109\u001b[0m }\n\u001b[1;32m    110\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m current_station \u001b[38;5;129;01min\u001b[39;00m departure_station_to_route:\n",
+      "Cell \u001b[0;32mIn[307], line 13\u001b[0m, in \u001b[0;36mtime_to_seconds\u001b[0;34m(time_str)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(s) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mINVALID TIME PASSED IN\u001b[39m\u001b[38;5;124m\"\u001b[39m, time_str)\n\u001b[0;32m---> 13\u001b[0m     \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     15\u001b[0m hour, minute \u001b[38;5;241m=\u001b[39m s \n\u001b[1;32m     16\u001b[0m hour \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(hour)\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
    ],
@@ -1322,6 +1345,50 @@
     "    print(file_name)\n",
     "    routes = schedule_to_routes(name, schedule)\n",
     "    all_routes[file_name] = routes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1139"
+      ]
+     },
+     "execution_count": 312,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([len(i) for i in all_routes.values()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flattened = []\n",
+    "for routes in all_routes.values():\n",
+    "    for route in routes.values():\n",
+    "        flattened.extend(route)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"routes.json\", \"w+\") as f:\n",
+    "    json.dump(flattened, f, indent=2)"
    ]
   },
   {
