Add mph to prod databse :shipit:

--- a/backend/scraping/scrape.ipynb
+++ b/backend/scraping/scrape.ipynb
@@ -1858,13 +1858,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 465,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "with open(\"routes.json\", \"w+\") as f:\n",
+    "with open(\"../../frontend/routes.json\", \"w\") as f:\n",
     "    json.dump(flattened, f, indent=2)"
    ]
   },
